--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <header></header>
+    <header class="cabecalho">
+        <nav class="cabecalho__menu">
+            <a class="cabecalho__menu__link">Home</a>
+            <a class="cabecalho__menu__link">Sobre mim</a>
+        </nav>
+    </header>
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">
@@ -23,13 +28,27 @@
                 primeiro portifólio sendo feito com intuito de 
                 aprender HTML e CSS.
             </p>
+            
             <div class="apresentacao__links">
-                <a class="apresentacao__links__link" href="https://www.linkedin.com/in/vinicius-casotti-301b321ba/">Linkedin</a>
-                <a class="apresentacao__links__link" href="https://github.com/kageofwar?tab=repositories">GitHub</a>
+                <h2 class="apresentacao__links__subtitulo">Visite minhas redes sociais</h2>
+                <a class="apresentacao__links__link" href="https://github.com/kageofwar?tab=repositories">
+                    <img src="assets/github.png" alt="imagem do github">    
+                    GitHub
+                </a>
+                <a class="apresentacao__links__link" href="https://github.com/kageofwar?tab=repositories">
+                    <img src="assets/linkedin.png" alt="imagem do linkedin">    
+                    Linkedin
+                </a>
+                <a class="apresentacao__links__link" href="https://github.com/kageofwar?tab=repositories">
+                    <img src="assets/twitch.png" alt="imagem da twitch">    
+                    Twitch
+                </a>
             </div>
         </section>
-            <img src="cursedgoat.png" alt="Minha foto">
+            <img src="assets/cursedgoat.png" alt="Minha foto">
     </main>
-    <footer></footer>
+    <footer class="rodape">
+        <p>Desenvolvido por Vinicius Casotti</p>
+    </footer>
 </body>
 </html>
