--- a/about.html
+++ b/about.html
@@ -3,9 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles/style.css">
+    <title>Sobre mim</title>
 </head>
 <body>
-    
+    <header class="cabecalho">
+        <nav class="cabecalho__menu">
+            <a class="cabecalho__menu__link" href="index.html">Home</a>
+            <a class="cabecalho__menu__link" href="about.html">Sobre mim</a>
+        </nav>
+    </header>
+    <main class="apresentacao">
+        <section class="apresentacao__conteudo">
+            <h1 class="apresentacao__conteudo__titulo">Sobre mim</h1>
+            <p class="apresentacao__conteudo">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam assumenda quod libero sunt cum tempora? Error consequatur voluptate id tempora tenetur labore quo? Earum, asperiores magni repudiandae quae corrupti aliquid.</p>
+            <p class="apresentacao__conteudo">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam eveniet nulla itaque ducimus molestias quia suscipit saepe laboriosam. Rerum, qui corporis? Perferendis fugit accusamus alias ipsam? Temporibus a necessitatibus soluta!</p>
+        </section>
+        <img class="apresentacao__imagem" src="assets/cursedgoat.png" alt="Minha foto">
+    </main>
+    <footer class="rodape">
+        <p>Desenvolvido por Vinicius Casotti</p>
+    </footer>
 </body>
 </html>
