--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
     <header class="cabecalho">
         <nav class="cabecalho__menu">
-            <a class="cabecalho__menu__link">Home</a>
-            <a class="cabecalho__menu__link">Sobre mim</a>
+            <a class="cabecalho__menu__link" href="index.html">Home</a>
+            <a class="cabecalho__menu__link" href="about.html">Sobre mim</a>
         </nav>
     </header>
     <main class="apresentacao">
-        <section class="apresentacao__conteudo">
+    <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">
                 Olá! Sou Vinicius Casotti, Atualmente
                 <strong class="titulo-destaque">
@@ -31,21 +31,21 @@
             
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Visite minhas redes sociais</h2>
-                <a class="apresentacao__links__link" href="https://github.com/kageofwar?tab=repositories">
+                <a class="apresentacao__links__apresentacao" href="https://github.com/kageofwar?tab=repositories">
                     <img src="assets/github.png" alt="imagem do github">    
                     GitHub
                 </a>
-                <a class="apresentacao__links__link" href="https://github.com/kageofwar?tab=repositories">
+                <a class="apresentacao__links__apresentacao" href="https://github.com/kageofwar?tab=repositories">
                     <img src="assets/linkedin.png" alt="imagem do linkedin">    
                     Linkedin
                 </a>
-                <a class="apresentacao__links__link" href="https://github.com/kageofwar?tab=repositories">
+                <a class="apresentacao__links__apresentacao" href="https://github.com/kageofwar?tab=repositories">
                     <img src="assets/twitch.png" alt="imagem da twitch">    
                     Twitch
                 </a>
             </div>
         </section>
-            <img src="assets/cursedgoat.png" alt="Minha foto">
+            <img class="apresentacao__imagem" src="assets/cursedgoat.png" alt="Minha foto">
     </main>
     <footer class="rodape">
         <p>Desenvolvido por Vinicius Casotti</p>
